--- a/testclient.html
+++ b/testclient.html
@@ -151,6 +151,7 @@
 		<script type="text/javascript" src="./js/damage_rby.js?"></script>
 		<script type="text/javascript" src="./js/ko_chance.js?"></script>
 		<script type="text/javascript" src="./js/calculate-ranges.js?"></script>
+		<script type="text/javascript" src="./js/ai.js?"></script>
 		<!--<script type="text/javascript" src="./js/moveset_import.js?"></script>-->
 
 	</body>
